output.txt
/home/bryant/Desktop/Projects/KDR Revamped/node_modules/ts-node/src/index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: ⨯ Unable to compile TypeScript:
scripts/generate-profile-icons.ts(12,43): error TS1117: An object literal cannot have multiple properties with the same name.

    at createTSError (/home/bryant/Desktop/Projects/KDR Revamped/node_modules/ts-node/src/index.ts:859:12)
    at reportTSError (/home/bryant/Desktop/Projects/KDR Revamped/node_modules/ts-node/src/index.ts:863:19)
    at getOutput (/home/bryant/Desktop/Projects/KDR Revamped/node_modules/ts-node/src/index.ts:1077:36)
    at Object.compile (/home/bryant/Desktop/Projects/KDR Revamped/node_modules/ts-node/src/index.ts:1433:41)
    at Module.m._compile (/home/bryant/Desktop/Projects/KDR Revamped/node_modules/ts-node/src/index.ts:1617:30)
    at node:internal/modules/cjs/loader:1934:10
    at Object.require.extensions.<computed> [as .ts] (/home/bryant/Desktop/Projects/KDR Revamped/node_modules/ts-node/src/index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1524:32)
    at Module._load (node:internal/modules/cjs/loader:1326:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14) {
  diagnosticCodes: [ 1117 ]
}
